// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[pages] Cart when loading should render correctly 1`] = `
.c2 {
  padding: 2rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 0.1rem solid gainsboro;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 3rem;
}

.c1 {
  margin: 0 1rem;
}

.c3 {
  font-family: circular,serif;
  font-weight: 400;
  color: #ef0d33;
  text-transform: uppercase;
}

<body>
  <div>
    <header
      class="c0"
    >
      <div
        class=""
      >
        <a
          class="c1"
          href="/products"
        >
          All Products
        </a>
      </div>
      <div
        class=""
      >
        <a
          class="c1"
          href="/cart"
        >
          My Cart
        </a>
        |
        <a
          class="c1"
          href="/login"
        >
          Log In
        </a>
         |
        <a
          class="c1"
          href="/signup"
        >
          Sign Up
        </a>
      </div>
    </header>
    <div
      class="c2"
    >
      <h1
        class="c3"
      >
        Your cart
      </h1>
      <ul />
    </div>
  </div>
</body>
`;

exports[`[pages] Cart when products loaded should render correctly 1`] = `
<body>
  <div>
    <header
      class="sc-bwzfXH kuSkvH"
    >
      <div
        class="sc-htpNat KtFsv"
      >
        <a
          class="sc-bxivhb cHbCFb"
          href="/products"
        >
          All Products
        </a>
      </div>
      <div
        class="sc-htpNat KtFsv"
      >
        <a
          class="sc-bxivhb cHbCFb"
          href="/cart"
        >
          My Cart
        </a>
        |
        <a
          class="sc-bxivhb cHbCFb"
          href="/login"
        >
          Log In
        </a>
         |
        <a
          class="sc-bxivhb cHbCFb"
          href="/signup"
        >
          Sign Up
        </a>
      </div>
    </header>
    <div
      class="sc-bdVaJa eGntFc"
    >
      <h1
        class="sc-htoDjs gUiwOs"
      >
        Your cart
      </h1>
      <ul />
    </div>
  </div>
  .c2 {
  padding: 2rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 0.1rem solid gainsboro;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 3rem;
}

.c1 {
  margin: 0 1rem;
}

.c3 {
  font-family: circular,serif;
  font-weight: 400;
  color: #ef0d33;
  text-transform: uppercase;
}

.c4 {
  background: #ef0d33;
  cursor: pointer;
  padding: 1rem;
  margin-top: 0.5rem;
  border: none;
  border-radius: 5px;
  color: #fff;
}

<div>
    <header
      class="c0"
    >
      <div
        class=""
      >
        <a
          class="c1"
          href="/products"
        >
          All Products
        </a>
      </div>
      <div
        class=""
      >
        <a
          class="c1"
          href="/cart"
        >
          My Cart
        </a>
        |
        <a
          class="c1"
          href="/login"
        >
          Log In
        </a>
         |
        <a
          class="c1"
          href="/signup"
        >
          Sign Up
        </a>
      </div>
    </header>
    <div
      class="c2"
    >
      <h1
        class="c3"
      >
        Your cart
      </h1>
      <ul>
        <li>
          <p>
            First Test Product
             - 
            1
          </p>
          <button
            class="c4"
            type="button"
          >
            Remove
          </button>
        </li>
      </ul>
    </div>
  </div>
</body>
`;
